samples/_failures_safe/1761292241_67f0fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06f1947f.c: In function ‘main’:
./samples/SAFE/__tmp_06f1947f.c:155:51: error: expected ‘)’ at end of input
  155 |                 if (multiply_matrices(&mat1, &mat2
      |                                      ~            ^
      |                                                   )
./samples/SAFE/__tmp_06f1947f.c:155:21: error: too few arguments to function ‘multiply_matrices’
  155 |                 if (multiply_matrices(&mat1, &mat2
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_06f1947f.c:65:5: note: declared here
   65 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_06f1947f.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (multiply_matrices(&mat1, &mat2
      |                 ^~
./samples/SAFE/__tmp_06f1947f.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06f1947f.c:155:17: error: expected declaration or statement at end of input
